# cydr

./: .gitignore  MANIFEST.in  README.md  archi.md  pixi.toml  pyproject.toml  run-pixi-test-matrix.sh  setup.py
.github/workflows/: tests.yml
bench/: README.md  __init__.py  _common.py  every_supported_cython_serialization.py  fixed_arrays_cython_serialization.py  joint_state_cython_serialization.py  primitive_matrix_cython_serialization.py  schema.py
cydr/: __init__.py  _every_supported_cython.pxd  _every_supported_cython.pyx  _message_ops.py  _runtime.py  _warmup.py  cython_generator.py  idl.py  schema_types.py  structs.py  types.py
examples/: roundtrip_custom_message.py  roundtrip_xcdrstruct_message.py  serialize_custom_message.py
tests/: cache.py  schema.py
tests/validation/: test_cython_serializer_generator.py  test_every_supported_cython_serializer.py  test_generated_cython_tmpdir_smoke.py  test_generated_schema_matrix.py  test_invalid_schema_validation.py  test_message_equality.py  test_msgspec_structs.py
xcdrjit/: __init__.py  _every_supported_cython.pxd  _every_supported_cython.pyx  _message_ops.py  _runtime.py  _warmup.py  cython_generator.py  every_supported_cython.py  idl.py  schema_types.py  structs.py  time.py
