[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "cydr"
version = "0.1.2"
description = "A fast, pythonic, focused XCDR1 serializer/deserializer for Python with a schema API and just-in-time compilation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Elian NEPPEL", email = "elian.dev@posteo.com" }
]
keywords = ["cdr", "xcdr", "cython", "codec", "serialization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "Cython>=3.0,<4",
    "msgspec>=0.20.0,<1",
    "numpy>=1.26,<3",
    "np2typing>=2.6.3,<3",
]

[project.optional-dependencies]
dev = [
    "cyclonedds-idl>=0.1.0,<0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cydr", "cydr.*"]

[tool.setuptools.package-data]
cydr = ["*.pxd", "*.pyx", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive", "bench/_generated_cython_cache", "tests/_generated_cython_cache"]
